--- a/src/app/components/common/personalCard/personalCard.scss
+++ b/src/app/components/common/personalCard/personalCard.scss
@@ -6,6 +6,10 @@
 .title {
     text-align: center;
     margin-bottom: 30px;
+    button {
+        border: none;
+        background-color: none;
+    }
 }
 .personal-card {
     &__wrapper {
