--- a/src/app/components/ui/footer/footer.module.css
+++ b/src/app/components/ui/footer/footer.module.css
@@ -4,11 +4,19 @@
     transition: all 0.15s ease;
 }
 
+.footerLink {
+    color: rgba(0, 0, 0, 0.55);
+}
+
 .footerLink:hover {
-    background-color: #5e666d;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .footerIcon {
-    width: 23px;
-    height: 23px;
+    width: 20px;
+    height: 20px;
+}
+
+.footer {
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
