--- a/src/app/components/ui/footer/footer.module.css
+++ b/src/app/components/ui/footer/footer.module.css
@@ -20,3 +20,9 @@
 .footer {
     border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
+
+@media screen and (max-width: 767px) {
+    .footerLinkName {
+        display: none;
+    }
+}
