--- a/src/app/components/ui/footer/footer.module.css
+++ b/src/app/components/ui/footer/footer.module.css
@@ -1,3 +1,29 @@
+.footer {
+    position: absolute;
+    bottom: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.25);
+    font-size: 0.9rem;
+    background-color: var(--bs-light);
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 48px;
+    width: 100%;
+}
+
+.footerContent {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.footerLinksWrap {
+    display: flex;
+    gap: 20px;
+}
+
 .footerLink {
     padding: 4px 7px;
     border-radius: 3px;
@@ -6,6 +32,9 @@
 
 .footerLink {
     color: rgba(0, 0, 0, 0.55);
+    text-decoration: none;
+    display: flex;
+    gap: 0.5rem;
 }
 
 .footerLink:hover {
@@ -17,12 +46,26 @@
     height: 20px;
 }
 
-.footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.25);
-}
-
 @media screen and (max-width: 767px) {
     .footerLinkName {
         display: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .footer {
+        padding: 10px !important;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .footerCopyright {
+        display: none;
+    }
+    .footerContent {
+        justify-content: center;
+    }
+    .footerLinksWrap {
+        gap: 30px;
     }
 }
