--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
+
+.mainContainer {
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 90px;
+}
