--- a/src/app/components/ui/footer/footer.module.css
+++ b/src/app/components/ui/footer/footer.module.css
@@ -4,11 +4,10 @@
     border-top: 1px solid rgba(0, 0, 0, 0.25);
     font-size: 0.9rem;
     background-color: var(--bs-light);
-    height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 48px;
+    padding: 24px 48px;
     width: 100%;
 }
 
@@ -54,7 +53,7 @@
 
 @media screen and (max-width: 480px) {
     .footer {
-        padding: 10px !important;
+        padding: 24px 15px !important;
     }
 }
 
